// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/UserProjectsWrapper With Projects 1`] = `
<div
  className="max-w-screen-xl mx-auto p-6 block md:grid gap-4 grid-cols-12"
  style={
    Object {
      "padding": "5vmax 0",
    }
  }
>
  <section
    className="col-span-3"
  >
    <h1
      className="text-2xl font-headline mt-6"
    >
      Meine Projekte
    </h1>
    <div
      className="mt-8"
    >
      <a
        className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green bg-purple text-white font-bold hover:bg-blue hover:text-green"
        href="/account/projects/new"
        onClick={[Function]}
        onMouseEnter={[Function]}
        variant="primary"
      >
        Neues Projekt
      </a>
      <nav
        aria-label="Projekte-Navigation"
        className="mt-12"
      >
        <ul>
          <li
            aria-labelledby="user-project-item-1"
            className="my-4"
          >
            <button
              className="focus-offset text-left transition navigation-link-active"
              id="user-project-item-1"
              onClick={[Function]}
            >
              Project A
            </button>
          </li>
          <li
            aria-labelledby="user-project-item-2"
            className="my-4"
          >
            <button
              className="focus-offset text-left transition navigation-link"
              id="user-project-item-2"
              onClick={[Function]}
            >
              Project B
            </button>
          </li>
          <li
            aria-labelledby="user-project-item-3"
            className="my-4"
          >
            <button
              className="focus-offset text-left transition navigation-link"
              id="user-project-item-3"
              onClick={[Function]}
            >
              Project C
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </section>
  <section
    className="md:col-span-9 mt-6 md:mt-0 bg-white border border-gray-200 shadow"
  >
    <h1>
      Insert here: the main content
    </h1>
  </section>
</div>
`;

exports[`Storyshots Layout/UserProjectsWrapper Without Projects 1`] = `
<div
  className="max-w-screen-xl mx-auto p-6 block md:grid gap-4 grid-cols-12"
  style={
    Object {
      "padding": "5vmax 0",
    }
  }
>
  <section
    className="col-span-3"
  >
    <h1
      className="text-2xl font-headline mt-6"
    >
      Meine Projekte
    </h1>
    <div
      className="mt-8"
    >
      <a
        className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green bg-purple text-white font-bold hover:bg-blue hover:text-green"
        href="/account/projects/new"
        onClick={[Function]}
        onMouseEnter={[Function]}
        variant="primary"
      >
        Neues Projekt
      </a>
    </div>
  </section>
  <section
    className="md:col-span-9 mt-6 md:mt-0 bg-white border border-gray-200 shadow"
  >
    <h1>
      Insert here: the main content
    </h1>
  </section>
</div>
`;
